# WeiboSpider

./: .gitignore  README.md  main.py  pyproject.toml
weibospider/config/: spider_config.example.toml
weibospider/spiders/: tweet_by_user_id.py
