[project]
name = "weibospider-fork"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Eli Yip", email = "yezi.2022@outlook.com" }
]
dependencies = [
    "python_dateutil",
    "scrapy>=2.12.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/weibospider_fork"]
